compiler/testData/diagnostics/tests/enum/enumWithAnnotationKeyword.kt
// RUN_PIPELINE_TILL: FRONTEND
<!WRONG_MODIFIER_TARGET!>annotation<!> enum class E {
    D
}

/* GENERATED_FIR_TAGS: enumDeclaration, enumEntry */
